crates/bril-macros/tests/instruction/incorrect_const_instruction.stderr
error: invalid instruction
 --> tests/instruction/incorrect_const_instruction.rs:5:1
  |
5 | instruction!(op = const, value = 1, args = [a]);
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the macro `instruction` (in Nightly builds, run with -Z macro-backtrace for more info)
